--- a/00_Macaw-forum-examples/header/css/index.css
+++ b/00_Macaw-forum-examples/header/css/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(255, 255, 255);
-  font: 400 22px/1.38 'Source Sans Pro';
+  font: 400 1.375em/1.38 'Source Sans Pro';
   color: rgb(255, 255, 255);
 }
 
@@ -8,6 +8,7 @@ body {
   float: left;
   clear: both;
   width: 100%;
+  font-size: 1em;
   line-height: 1.38;
   text-align: center;
   color: rgb(255, 255, 255);
@@ -17,7 +18,7 @@ body {
   float: left;
   width: 100%;
   margin-top: 200px;
-  font-size: 100px;
+  font-size: 4.545em;
   font-weight: 200;
   line-height: 1.38;
   text-align: center;
@@ -44,7 +45,7 @@ body {
 
 @media(max-width: 500px) {
   body {
-    font-size: 18px;
+    font-size: 1.125em;
   }
 
   .wrapper .subtext {
@@ -52,7 +53,7 @@ body {
   }
 
   .wrapper .title {
-    font-size: 50px;
+    font-size: 2.778em;
   }
 
   ._container,
